--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Hello, this is my first Angular App</h1>
-<app-chat></app-chat>
-<app-users></app-users>
+<div class="styled">
+  <h1>Hello, this is my first Angular App</h1>
+  <app-chat></app-chat>
+  <app-users></app-users>
+</div>
