--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -3,3 +3,9 @@
   <app-chat></app-chat>
   <app-users></app-users>
 </div>
+<div class="styled">
+  <app-string-interpolation></app-string-interpolation>
+</div>
+<div class="styled">
+  <app-prop-binding></app-prop-binding>
+</div>
