--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -9,3 +9,6 @@
 <div class="styled">
   <app-prop-binding></app-prop-binding>
 </div>
+<div class="styled">
+  <app-event-binding></app-event-binding>
+</div>
