--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/components/bindings/prop-binding/prop-binding.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/components/bindings/prop-binding/prop-binding.component.html
@@ -1,3 +1,7 @@
 <div class="styled">
-    <h3>Property binding component</h3>
+
+    <h3 [innerText]="message"></h3>
+
+    <input type="text" [value]="message">
+
 </div>
