--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/components/bindings/prop-binding/prop-binding.component.scss
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/components/bindings/prop-binding/prop-binding.component.scss
@@ -2,5 +2,5 @@
     color: white;
     background-color: rgb(104, 57, 57);
     border: 5px solid rgb(228, 225, 225);
-    padding: 5px 20px 
+    padding: 5px 20px 5px 20px;
 } 
