--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.scss
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.scss
@@ -4,3 +4,15 @@ h1 {
     background-color: rgb(0, 0, 0);
     padding: 10px 35px
 }
+
+span {
+    font-weight: bold;
+}
+
+.positive {
+    color: green;
+}
+
+.negative {
+    color: red;
+}
