--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -11,15 +11,16 @@
 </div>
 <div class="styled">
   <app-event-binding></app-event-binding>
-</div>
+</div> 
 
-
-  
+<!-- 
   <h1>@input</h1>
   <app-hello [name]="title"></app-hello>
-  <hr>
+  <hr>  -->
 
-  <h1>@output</h1>
-  <h4>Current value of the Counter is <span [class]="'classToSet'">{{ counter }}</span></h4>
-  <app-counter-actions (counterChange)="onCounterChange($event)"></app-counter-actions>
+  <h1>@Output</h1>
+  <h4>Current value of the Counter is <span [class]="classToSet">{{ counter }}</span></h4>
+  <app-counter-actions 
+  (counterChange)="onCounterChange($event)">
+</app-counter-actions>
 
