--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -21,6 +21,6 @@
   <h1>@Output</h1>
   <h4>Current value of the Counter is <span [class]="classToSet">{{ counter }}</span></h4>
   <app-counter-actions 
-  (counterChange)="onCounterChange($event)">
+  [(counter)]="counter">
 </app-counter-actions>
 
