--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -3,24 +3,32 @@
   <app-chat></app-chat>
   <app-users></app-users>
 </div>
-<div class="styled">
+<!-- <div class="styled">
   <app-string-interpolation></app-string-interpolation>
-</div>
-<div class="styled">
+</div> -->
+<!-- <div class="styled">
   <app-prop-binding></app-prop-binding>
 </div>
 <div class="styled">
   <app-event-binding></app-event-binding>
-</div> 
+</div>  -->
 
 <!-- 
   <h1>@input</h1>
   <app-hello [name]="title"></app-hello>
   <hr>  -->
 
-  <h1>@Output</h1>
+  <!-- <h1>@Output</h1>
   <h4>Current value of the Counter is <span [class]="classToSet">{{ counter }}</span></h4>
   <app-counter-actions 
   [(counter)]="counter">
-</app-counter-actions>
+</app-counter-actions> -->
 
+<hr>
+
+<!-- <input type="text" [(ngModel)]="title">
+<h3>{{ title }}</h3> -->
+
+<div class="styled">
+  <app-att-binding></app-att-binding>
+</div>
