--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="styled">
-  <h1>Hello, this is my first Angular App</h1>
-  <app-chat></app-chat>
+<!-- <div class="styled">
+  <h1>Hello, this is my first Angular App</h1> -->
+  <!-- <app-chat></app-chat>
   <app-users></app-users>
-</div>
+</div> -->
 <!-- <div class="styled">
   <app-string-interpolation></app-string-interpolation>
 </div> -->
@@ -18,7 +18,7 @@
   <app-hello [name]="title"></app-hello>
   <hr>  -->
 
-  <h1>@Output</h1>
+  <!-- <h1>@Output</h1>
   <h4>Current value of the Counter is <span [class]="classToSet">{{ counter }}</span></h4>
   <app-counter-actions 
   [(counter)]="counter">
@@ -35,4 +35,9 @@
 
 <div>
   <app-class-binding></app-class-binding>
+</div> -->
+
+<div>
+  <app-style-binding></app-style-binding>
 </div>
+
