--- a/Angular14-Masterclass/Section1/my-first-angular-project/src/styles.scss
+++ b/Angular14-Masterclass/Section1/my-first-angular-project/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Add application styles & imports to this file! */
+
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 .styled {
     border: 2px solid black;
     padding: 5px 5px 
