--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
@@ -7,7 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li  class="nav-item">
-            <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/home" href="">Home</a>
+            <a routerLinkActive="active" class="nav-link"  routerLink="/home" href="">Home</a>
+          </li>
+          <li  class="nav-item">
+            <a routerLinkActive="active" class="nav-link"  routerLink="/users" href="">Users</a>
           </li>
           <li  class="nav-item">
             <a  routerLinkActive="active" class="nav-link" routerLink="/blog" href="#">Blog</a>
