--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/users/users.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/users/users.component.html
@@ -1,9 +1,14 @@
-<div class="container">
-    <ul class="list-group">
-        <li 
-            class="list-group-item"
-            *ngFor="let user of users">
-            {{ user.name }}
-        </li>
-    </ul>
+<div>
+    <div class="container">
+        <div class="col-md-4">
+            <ul class="list-group">
+                <li class="list-group-item" *ngFor="let user of users">
+                    <app-user [user]="user"></app-user>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <app-user-details></app-user-details>
+    </div>
 </div>
