--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/users/users.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/users/users.component.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="col-md-8">
-            <app-users-details></app-users-details>
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
