--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/users-details/users-details.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/users-details/users-details.component.html
@@ -1,1 +1,10 @@
-<h3>Details of the user:</h3>
+<h3>
+    Details of the user:
+    <br>
+    <br>
+    User ID: {{ user.id }}
+    <br>
+    User Name: {{ user.name }}
+    <br>
+    User email: {{ user.email }}
+</h3>
