--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/users-details/users-details.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/users-details/users-details.component.html
@@ -1,10 +1,11 @@
 <h3>
-    Details of the user:
+    Details of the user:<br>
     <br>
-    <br>
-    User ID: {{ user.id }}
-    <br>
-    User Name: {{ user.name }}
-    <br>
-    User email: {{ user.email }}
+    User ID: {{ user.id }}<br>
+    User Name: {{ user.name }}<br>
+    User email: {{ user.email }}<br>
+
+    UserName: {{ user.username }} <br>
+
+    <pre>{{ user.address | json }}</pre>
 </h3>
