--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/users-details/users-details.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/users-details/users-details.component.html
@@ -6,6 +6,10 @@
     User email: {{ user.email }}<br>
 
     UserName: {{ user.username }} <br>
-
-    <pre>{{ user.address | json }}</pre>
+    <hr>
+    <button class="btn btn-success" (click)="createUser()">Create User </button>
+    <button class="btn btn-primary" (click)="updateUser()">Update User </button>
+    <button class="btn btn-danger" (click)="deleteUser()">Delete User </button>
+    <button class="btn btn-warning" (click)="getUserPosts()">Get Posts By User </button>
+    
 </h3>
