--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
@@ -21,6 +21,9 @@
           <li  class="nav-item">
             <a routerLinkActive="active" class="nav-link" routerLink="/str-dir" href="#">Built In Str Dir</a>
           </li>
+          <li  class="nav-item">
+            <a routerLinkActive="active" class="nav-link" routerLink="/attr-dir" href="#">Built In Attr Dir</a>
+          </li>
         </ul>
       </div>
     </div>
