--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/built-in-attr-dir/built-in-attr-dir.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/built-in-attr-dir/built-in-attr-dir.component.html
@@ -7,6 +7,7 @@
 <br>
 
 <hr>  
-<div [ngClass]="gradientToggle ? 'blue-gradient' : 'red-gradient'">
+<div [ngClass]="gradientToggle ? 'blue-gradient' : 'red-gradient'"
+     [ngStyle]="{ color: 'white', 'font-family': 'Courier' }">
     This is a DIV
 </div>
