--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/built-in-attr-dir/built-in-attr-dir.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/built-in-attr-dir/built-in-attr-dir.component.html
@@ -11,3 +11,8 @@
      [ngStyle]="{ color: 'white', 'font-family': 'Courier' }">
     This is a DIV
 </div>
+
+<hr>
+<h4>NgNonBindable</h4>
+
+<p ngNonBindable>The user's name can be printed on to the screen in Angular using the string interpolation Syntax like: {{ userName }}</p>
