--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
@@ -24,6 +24,9 @@
           <li  class="nav-item">
             <a routerLinkActive="active" class="nav-link" routerLink="/attr-dir" href="#">Built In Attr Dir</a>
           </li>
+          <li  class="nav-item">
+            <a routerLinkActive="active" class="nav-link" routerLink="/directives" href="#">Directives</a>
+          </li>
         </ul>
       </div>
     </div>
