--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/directive-host/directive-host.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/directive-host/directive-host.component.html
@@ -1,1 +1,16 @@
-<input type="text" value="Initial Value" appChangeCase>
+<input type="text" value="Initial Value" [appChangeCase]="'upper'">
+<hr>
+
+<div *ngIf="showUnless">
+    This will show
+</div>
+
+<ng-template [ngIf]="showUnless">
+    <div >
+        This will show
+    </div>
+</ng-template>
+<hr>
+<div *appUnless="false">
+    Unless directive = This will show
+</div>
