--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/header/header.component.html
@@ -27,6 +27,9 @@
           <li  class="nav-item">
             <a routerLinkActive="active" class="nav-link" routerLink="/directives" href="#">Directives</a>
           </li>
+          <li  class="nav-item">
+            <a routerLinkActive="active" class="nav-link" routerLink="/parent" href="#">Parent Component</a>
+          </li>
         </ul>
       </div>
     </div>
