--- a/Angular14-Masterclass/Section1/my-second-app/src/app/components/parent/parent.component.html
+++ b/Angular14-Masterclass/Section1/my-second-app/src/app/components/parent/parent.component.html
@@ -12,6 +12,21 @@
     <li class="list-group-item">Date With the Pipe and Params: {{ dateToday | date: 'full' | uppercase }}</li>
 </ul>
 
+<hr>
+
+<h4>
+    Pure and Impure Pipes
+</h4>
+
+<button class="btn btn-primary" (click)="addUser()">Add User</button>
+
+<input type="text" [(ngModel)]="filterIdType">
+
+<ul class="list-group">
+    <li class="list-group-item" *ngFor="let user of users | filter : filterIdType" >
+        <div class="alert alert-success" role="alert">UserID: {{ user.id }}, User Name: {{ user.name }}</div>
+    </li>
+</ul>
 
 
 
