--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/header/header.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/header/header.component.html
@@ -19,16 +19,7 @@
             <a routerLinkActive="active" class="nav-link" routerLink="/about" href="#">About</a>
           </li>
           <li  class="nav-item">
-            <a routerLinkActive="active" class="nav-link" routerLink="/str-dir" href="#">Built In Str Dir</a>
-          </li>
-          <li  class="nav-item">
-            <a routerLinkActive="active" class="nav-link" routerLink="/attr-dir" href="#">Built In Attr Dir</a>
-          </li>
-          <li  class="nav-item">
-            <a routerLinkActive="active" class="nav-link" routerLink="/directives" href="#">Directives</a>
-          </li>
-          <li  class="nav-item">
-            <a routerLinkActive="active" class="nav-link" routerLink="/parent" href="#">Parent Component</a>
+            <a routerLinkActive="active" class="nav-link" routerLink="/new-user" href="#">New User</a>
           </li>
         </ul>
       </div>
