--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
@@ -1,1 +1,32 @@
-<p>new-user works!</p>
+<div class="container">
+    <h3>NEW USER FORM</h3>
+     <form>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="name" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" name="name" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" name="name" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="website">Website</label>
+            <input type="text" name="name" class="form-control">
+        </div>
+        <hr>
+        <pre>
+
+        </pre>
+        <hr>
+        <button class="btn btn-primary" type="submit">Submit</button>
+     </form>
+</div>
+
