--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
@@ -1,25 +1,26 @@
 <div class="container">
     <h3>NEW USER FORM</h3>
-     <form>
+    <hr>
+     <form (ngSubmit)="submit()">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" class="form-control">
+            <input type="text" name="name" class="form-control" ngModel>
         </div>
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" name="name" class="form-control">
+            <input type="text" name="name" class="form-control" ngModel>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" name="name" class="form-control">
+            <input type="text" name="name" class="form-control" ngModel>
         </div>
         <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="text" name="name" class="form-control">
+            <input type="text" name="name" class="form-control" ngModel>
         </div>
         <div class="form-group">
             <label for="website">Website</label>
-            <input type="text" name="name" class="form-control">
+            <input type="text" name="name" class="form-control" ngModel>
         </div>
         <hr>
         <pre>
