--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
@@ -1,10 +1,16 @@
 <div class="container">
     <h3>NEW USER FORM</h3>
     <hr>
-     <form (ngSubmit)="submit()">
+     <form  #userForm="ngForm" (ngSubmit)="submit(userForm)">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" class="form-control" ngModel>
+            <input required minlength="8" maxlength="20" pattern="John Doe" type="text" name="name" class="form-control" ngModel #name="ngModel">
+            <div *ngIf="name.touched && name.invalid" class="alert alert-danger">
+                <p *ngIf="name.errors?.['required']"> Name is required </p>
+                <p *ngIf="name.errors?.['minlength']"> Name must be at least 8 caracters long </p>
+                <p *ngIf="name.errors?.['required']"> Name can be at max 20 caracters long </p>
+                <p *ngIf="name.errors?.['required']"> Name must only be John Doe</p>
+            </div>
         </div>
         <div class="form-group">
             <label for="username">Username</label>
@@ -27,7 +33,7 @@
 
         </pre>
         <hr>
-        <button class="btn btn-primary" type="submit">Submit</button>
-     </form>
+        <button class="btn btn-primary" type="submit" [disabled]="userForm.invalid">Submit</button>
+    </form> 
 </div>
 
