--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
@@ -9,7 +9,7 @@
                 <p *ngIf="name.errors?.['required']"> Name is required </p>
                 <p *ngIf="name.errors?.['minlength']"> Name must be at least 8 caracters long </p>
                 <p *ngIf="name.errors?.['required']"> Name can be at max 20 caracters long </p>
-                <p *ngIf="name.errors?.['required']"> Name must only be John Doe</p>
+                <p *ngIf="name.errors?.['pattern']"> Name must only be John Doe</p>
             </div>
         </div>
         <div class="form-group">
