--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
@@ -4,16 +4,16 @@
     <form #userForm="ngForm" (ngSubmit)="submit(userForm)">
         <div class="form-group">
             <label for="name">Name</label>
-            <input required minlength="8" maxlength="20"  type="text" name="name" class="form-control"
-                ngModel #name="ngModel">
+            <input required minlength="8" maxlength="20" type="text" name="name" class="form-control" ngModel
+                #name="ngModel">
             <div *ngIf="name.touched && name.invalid" class="alert alert-danger">
                 <p *ngIf="name.errors?.['required']"> Name is required </p>
                 <p *ngIf="name.errors?.['minlength']"> Name must be at least 8 caracters long </p>
                 <p *ngIf="name.errors?.['required']"> Name can be at max 20 caracters long </p>
-                
+
             </div>
         </div>
-        
+
         <div class="form-group">
             <label for="email">Email</label>
             <input type="text" name="email" class="form-control" ngModel>
@@ -27,6 +27,39 @@
             <input type="text" name="website" class="form-control" ngModel>
         </div>
         <hr>
+        <div ngModelGroup name="address">
+            <div class="form-group">
+                <label for="street">Street</label>
+                <input type="text" name="street" class="form-control" ngModel>
+            </div>
+            <div class="form-group">
+                <label for="suite">Suite</label>
+                <input type="text" name="suite" class="form-control" ngModel>
+            </div>
+            <div class="form-group">
+                <label for="city">City</label>
+                <input type="text" name="city" class="form-control" ngModel>
+            </div>
+            <div class="form-group">
+                <label for="zipcode">Zipcode</label>
+                <input type="text" name="zipcode" class="form-control" ngModel>
+            </div>
+
+        </div>
+        <div ngModelGroup name="company">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" class="form-control" ngModel>
+            </div>
+            <div class="form-group">
+                <label for="catchPhrase">Catch Phrase</label>
+                <input type="text" name="catchPhrase" class="form-control" ngModel>
+            </div>
+            <div class="form-group">
+                <label for="bs">BS</label>
+                <input type="text" name="bs" class="form-control" ngModel>
+            </div>
+        </div>
         <div class="radio">
             <label for="gender" *ngFor="let gender of genders">
                 <input name="gender" [value]="gender" ngModel type="radio"> {{ gender }} <br>
