--- a/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
+++ b/Angular14-Masterclass/Section1/assignment01/src/app/components/new-user/new-user.component.html
@@ -27,7 +27,7 @@
             <input type="text" name="website" class="form-control" ngModel>
         </div>
         <hr>
-        <div ngModelGroup name="address">
+        <div ngModelGroup="address">
             <div class="form-group">
                 <label for="street">Street</label>
                 <input type="text" name="street" class="form-control" ngModel>
@@ -46,7 +46,7 @@
             </div>
 
         </div>
-        <div ngModelGroup name="company">
+        <div ngModelGroup="company">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" name="name" class="form-control" ngModel>
@@ -60,6 +60,17 @@
                 <input type="text" name="bs" class="form-control" ngModel>
             </div>
         </div>
+        <div ngModelGroup="geo">
+            <div class="form-group">
+                <label for="lat">Lat</label>
+                <input type="text" name="lat" class="form-control" ngModel>
+            </div>
+            <div class="form-group">
+                <label for="lng">Lng</label>
+                <input type="text" name="lng" class="form-control" ngModel>
+            </div>
+        </div>
+        <hr>
         <div class="radio">
             <label for="gender" *ngFor="let gender of genders">
                 <input name="gender" [value]="gender" ngModel type="radio"> {{ gender }} <br>
