--- a/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
+++ b/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
@@ -2,5 +2,8 @@
 <h3>Server Component working</h3>
 
 <hr>
+<button 
+class="btn btn-primary"
+[disabled]="!allowNewServer">Add Server</button>
 <app-server></app-server>
 <app-server></app-server>
