--- a/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
+++ b/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
@@ -5,5 +5,10 @@
 <button 
 class="btn btn-primary"
 [disabled]="!allowNewServer">Add Server</button>
+<hr>
+<p [innerText]="allowNewServer"></p>
+<hr>
+<p>{{ allowNewServer }}</p>
+<hr>
 <app-server></app-server>
 <app-server></app-server>
