--- a/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
+++ b/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
@@ -2,6 +2,13 @@
 <h3>Server Component working</h3>
 
 <hr>
+<label>Server Name</label>
+<input 
+    type="text" 
+    class="form-control"
+    (input)="onUpdateServerName($event)">
+    <br>
+   <p>{{ serverName }}</p> 
 <button 
 class="btn btn-primary"
 [disabled]="!allowNewServer"
