--- a/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
+++ b/Angular-Complete-Guide/my-first-app/src/app/servers/servers.component.html
@@ -3,16 +3,17 @@
 
 <hr>
 <label>Server Name</label>
+<!-- <input 
+    type="text" 
+    class="form-control" 
+    (input)="onUpdateServerName($event)"> -->
 <input 
     type="text" 
-    class="form-control"
-    (input)="onUpdateServerName($event)">
-    <br>
-   <p>{{ serverName }}</p> 
-<button 
-class="btn btn-primary"
-[disabled]="!allowNewServer"
-(click)="onCreateServer()">Add Server</button>
+    class="form-control" 
+    [(ngModel)]="serverName">
+<br>
+<!-- <p>{{ serverName }}</p> -->
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
 <hr>
 <h3>{{ serverCreationStatus }}</h3>
 <hr>
